--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -2,32 +2,34 @@ name: Build Debug APK
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build:
     name: Build APK
     runs-on: ubuntu-latest
 
+    env:
+      JAVA_OPTS: "-Xmx4g"
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout project
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: 17
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v3
 
-      - name: Build APK
+      - name: Build Debug APK
         run: ./gradlew :app:assembleDebug
 
-      - name: Upload APK artifact
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug.apk
+          name: FleetManager-debug-apk
           path: app/build/outputs/apk/debug/app-debug.apk
