--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,35 +1,37 @@
-name: Build Debug APK
+name: Android Build
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main  # Change cette ligne si ta branche principale s'appelle différemment
 
 jobs:
   build:
-    name: Build APK
+    name: Build Debug APK
     runs-on: ubuntu-latest
 
-    env:
-      JAVA_OPTS: "-Xmx4g"
-
     steps:
-      - name: Checkout project
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Set up JDK
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 17
 
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v3
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
 
-      - name: Build Debug APK
+      - name: Decode google-services.json
+        run: |
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > app/google-services.json
+
+      - name: Build APK
         run: ./gradlew :app:assembleDebug
 
-      - name: Upload Debug APK
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: FleetManager-debug-apk
+          name: fleettrackr-debug-apk
           path: app/build/outputs/apk/debug/app-debug.apk
