--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,37 +1,33 @@
-name: Android Build
+name: Build Debug APK
 
 on:
   push:
     branches:
-      - main  # Change cette ligne si ta branche principale s'appelle différemment
+      - main
 
 jobs:
   build:
-    name: Build Debug APK
+    name: Build APK
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up JDK
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 17
 
-      - name: Make Gradle executable
+      - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
-
-      - name: Decode google-services.json
-        run: |
-          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > app/google-services.json
 
       - name: Build APK
         run: ./gradlew :app:assembleDebug
 
-      - name: Upload APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: fleettrackr-debug-apk
+          name: app-debug.apk
           path: app/build/outputs/apk/debug/app-debug.apk
