--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
+      - name: Clean project
+        run: ./gradlew clean
+
       - name: Build APK with Gradle
         run: ./gradlew :app:assembleDebug --build-cache --parallel --daemon --no-configuration-cache
 
@@ -35,6 +38,10 @@ jobs:
         uses: actions/upload-artifact@v4
         if: github.event_name == 'pull_request'
         with:
+          name: app-debug-${{ github.run_number }}
+          path: app/build/outputs/apk/debug/app-debug.apk
+          retention-days: 7
+          compression-level: 6        with:
           name: app-debug-${{ github.run_number }}
           path: app/build/outputs/apk/debug/app-debug.apk
           retention-days: 7
