--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -20,10 +20,17 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: 17
-          cache: 'gradle'
+          cache: 'none'  # Désactive le cache Gradle
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
+
+      - name: Delete Gradle and build cache
+        run: |
+          rm -rf ~/.gradle/caches
+          rm -rf ~/.gradle/daemon
+          rm -rf ~/.gradle/native
+          rm -rf app/build
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
@@ -31,8 +38,16 @@ jobs:
       - name: Clean project
         run: ./gradlew clean
 
+      - name: Print lambda lines to confirm source version
+        run: |
+          echo "DashboardScreen.kt:"
+          grep "rememberStableLambda" app/src/main/java/com/fleetmanager/ui/screens/dashboard/DashboardScreen.kt || echo "Line not found"
+          echo "---"
+          echo "EntryListScreen.kt:"
+          grep "rememberStableLambda" app/src/main/java/com/fleetmanager/ui/screens/entry/EntryListScreen.kt || echo "Line not found"
+
       - name: Build APK with Gradle
-        run: ./gradlew :app:assembleDebug --build-cache --parallel --daemon --no-configuration-cache
+        run: ./gradlew :app:assembleDebug --no-build-cache --no-configuration-cache --parallel --daemon
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
