--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -20,7 +20,10 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: 17
-          cache: gradle # Cache automatique du répertoire ~/.gradle
+          cache: gradle
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
 
       - name: Cache Android SDK
         uses: actions/cache@v4
@@ -28,12 +31,12 @@ jobs:
           path: |
             ~/.android
             ${{ env.ANDROID_SDK_ROOT }}
-          key: android-sdk-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          key: android-sdk-${{ runner.os }}-v1
           restore-keys: |
             android-sdk-${{ runner.os }}-
 
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
+      - name: Check Android SDK Cache Size (optional)
+        run: du -sh ~/.android $ANDROID_SDK_ROOT || true
 
       - name: Compute dynamic version
         id: versioning
