--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,6 +1,9 @@
 name: Build Debug APK
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
@@ -52,7 +55,6 @@ jobs:
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
-        if: github.event_name == 'pull_request'
         with:
           name: app-debug-${{ github.run_number }}
           path: app/build/outputs/apk/debug/app-debug.apk
