--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Decode keystore
         run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > release.keystore
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > app/release.keystore
 
       - name: Compute dynamic version
         id: versioning
