Replace dollar signs with AED

--- a/.github/workflows/recover-keystore.yaml
+++ b/.github/workflows/recover-keystore.yaml
@@ -9,11 +9,11 @@ jobs:
     steps:
       - name: Decode keystore from base64
         run: |
-          echo "$KEYSTORE_BASE64" > keystore.b64
+          echo "AEDKEYSTORE_BASE64" > keystore.b64
           base64 --decode keystore.b64 > my-release-key.jks
           ls -lh my-release-key.jks
         env:
-          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+          KEYSTORE_BASE64: AED{{ secrets.KEYSTORE_BASE64 }}
 
       - name: Upload keystore as artifact
         uses: actions/upload-artifact@v4
