--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -29,28 +29,28 @@ jobs:
 
       - name: Decode keystore
         run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > /home/runner/release.keystore
-          echo "KEYSTORE_PATH=/home/runner/release.keystore" >> $GITHUB_ENV
-          echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
-          echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
-          echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
+          echo "AED{{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > /home/runner/release.keystore
+          echo "KEYSTORE_PATH=/home/runner/release.keystore" >> AEDGITHUB_ENV
+          echo "KEYSTORE_PASSWORD=AED{{ secrets.KEYSTORE_PASSWORD }}" >> AEDGITHUB_ENV
+          echo "KEY_ALIAS=AED{{ secrets.KEY_ALIAS }}" >> AEDGITHUB_ENV
+          echo "KEY_PASSWORD=AED{{ secrets.KEY_PASSWORD }}" >> AEDGITHUB_ENV
 
       - name: Compute dynamic version
         id: versioning
         run: |
-          echo "VERSION_CODE=$((1000 + ${{ github.run_number }}))" >> $GITHUB_ENV
-          echo "VERSION_NAME=0.${{ github.run_number }}" >> $GITHUB_ENV
+          echo "VERSION_CODE=AED((1000 + AED{{ github.run_number }}))" >> AEDGITHUB_ENV
+          echo "VERSION_NAME=0.AED{{ github.run_number }}" >> AEDGITHUB_ENV
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
       - name: Build APK with Gradle
-        run: ./gradlew :app:assembleDebug -PVERSION_CODE=$VERSION_CODE -PVERSION_NAME=$VERSION_NAME --parallel --daemon
+        run: ./gradlew :app:assembleDebug -PVERSION_CODE=AEDVERSION_CODE -PVERSION_NAME=AEDVERSION_NAME --parallel --daemon
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug-${{ github.run_number }}
+          name: app-debug-AED{{ github.run_number }}
           path: app/build/outputs/apk/debug/app-debug.apk
           retention-days: 7
           compression-level: 6
