--- a/firebase.json
+++ b/firebase.json
@@ -11,7 +11,7 @@
         "*.local"
       ],
       "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint"
+        "npm --prefix \"AEDRESOURCE_DIR\" run lint"
       ]
     }
   ]
